@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.11.5
 ------------------------
+ o [, head and tail methods for enrichResult and gseaResult <2016-07-06, Wed>
  o change according to GOSemSim <2016-07-05, Tue>
  
 CHANGES IN VERSION 1.11.4
